==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/tim/implementation_3/hal_ll_tim.c <==
#include "hal_ll_tim.h"
#include "hal_ll_gpio.h"
#include "hal_ll_tim_pin_map.h"
#define hal_ll_tim_get_base_struct(_handle) ((hal_ll_tim_base_handle_t *)_handle)
#define hal_ll_tim_get_module_state_address ((hal_ll_tim_handle_register_t *)*handle)
#define hal_ll_tim_get_handle ( hal_ll_tim_handle_register_t * )hal_ll_tim_get_module_state_address->hal_ll_tim_handle
#define hal_ll_tim_get_base_from_hal_handle ((hal_ll_tim_hw_specifics_map_t *)((hal_ll_tim_handle_register_t *)\
                                            (((hal_ll_tim_handle_register_t *)(handle))->hal_ll_tim_handle))->hal_ll_tim_handle)->base
#define hal_ll_tim_wait_for_sync(_hal_sync_val) while( _hal_sync_val-- ){asm nop;}
#define HAL_LL_TIM_CMPA_BIT (0)
#define HAL_LL_TIM_CMPB_BIT (1)
#define HAL_LL_TIM_CMPC_BIT (2)
#define HAL_LL_TIM_CMPD_BIT (3)
#define HAL_LL_TIM_NO_PRESCALER (0)
#define HAL_LL_TIM_SET_SINGLE_SLOPE_PWM (0x3)
#define HAL_LL_TIM_RESET_WAFEFORM_GENERATOR (0x7)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_A (4)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_A_ATXMEGA_E5_SERIES (0)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_B (5)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_B_ATXMEGA_E5_SERIES (2)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_C (6)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_C_ATXMEGA_E5_SERIES (4)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_D (7)
#define HAL_LL_TIM_OUTPUT_COMPARE_CH_D_ATXMEGA_E5_SERIES (6)
#define HAL_LL_TIM_BYTE_MODE_NORMAL (0)
#define _fosc (Get_Fosc_kHz()*1000)

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    uint16_t local_freq = 0;
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    low_level_handle->init_ll_state = false;

    hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    // Calculate PWM frequency.
    local_freq = ( ( _fosc / hal_ll_tim_hw_specifics_map_local->freq_hz ) - 1 );

    // Populate appropriate registers.
    write_reg( hal_ll_hw_reg->hal_ll_pwm_perl_reg_address, ( (uint8_t)local_freq ) );
    write_reg( hal_ll_hw_reg->hal_ll_pwm_perh_reg_address, ( local_freq >> 8 ) );

    // Memorize information about the max period available (PWM duty cycle is dependant of this information).
    return ( hal_ll_tim_hw_specifics_map_local->max_period = local_freq ) ;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    uint16_t local_duty_cycle_value = 0;
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if ( low_level_handle->init_ll_state == false ) {
        _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );
        low_level_handle->init_ll_state = true;
    }

    // Calculate duty cycle value in accordance to max period available.
    local_duty_cycle_value = ( duty_ratio * hal_ll_tim_hw_specifics_map_local->max_period );

    // Insert duty cycle value into appropriate register (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_set_duty )
    ( hal_ll_tim_hw_specifics_map_local->base, local_duty_cycle_value );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    // Configure Waveform Generator for "Single-Slope PWM".
    set_reg_bits( hal_ll_hw_reg->hal_ll_pwm_ctrlb_reg_address, HAL_LL_TIM_SET_SINGLE_SLOPE_PWM );

    // Enable Compare mode for appropriate PWM driver channel (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_signal_start )
    ( hal_ll_tim_hw_specifics_map_local->base );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    // Detach PWM driver circuit from PWM pin (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_signal_stop )
    ( hal_ll_tim_hw_specifics_map_local->base );

    // Reset Waveform Generator.
    clear_reg_bits( hal_ll_hw_reg->hal_ll_pwm_ctrlb_reg_address, HAL_LL_TIM_RESET_WAFEFORM_GENERATOR );

    // Timer/Counter in OFF state.
    clear_reg( hal_ll_hw_reg->hal_ll_pwm_ctrla_reg_address );

    return HAL_LL_TIM_SUCCESS;
}

static void _hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {
    /*!< @brief Static, because clock doesn't change during runtime. */
    static uint32_t hal_ll_clock_value = Get_Fosc_kHz() * 2;

    // Get hardware register list for user-defined PWM pin.
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    // Set Clock source.
    set_reg_bit( hal_ll_hw_reg->hal_ll_pwm_ctrla_reg_address, HAL_LL_TIM_NO_PRESCALER );

    // Clear any output leftovers from the Waveform Generator (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_hw_init_pwm_mode )
    ( hal_ll_tim_hw_specifics_map_local->base );

    // Disable Event Action Engine.
    clear_reg( hal_ll_hw_reg->hal_ll_pwm_ctrld_reg_address );

    // Give it some time to stabilize.
    hal_ll_tim_wait_for_sync( hal_ll_clock_value );
}
